fixed spacing issues, added footers, added css for footers, fixed link issues with index name change

--- a/Catagories/About us.css
+++ b/Catagories/About us.css
@@ -83,6 +83,7 @@ body {
 .section-text {
     font-size: 1.1rem;
     color: #555;
+    padding-top: 15px;
 }
 
 .section-image {
