--- a/Catagories/Catagories.css
+++ b/Catagories/Catagories.css
@@ -51,6 +51,7 @@ body {
     max-width: 1400px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 100px;
 }
 
 .sidebar {
@@ -235,4 +236,41 @@ body {
     position: fixed;
     width: 100%;
     bottom: 0;
+}
+
+.footer p {
+    margin: 10px 0;
+    font-size: 16px;
+}
+
+.footer .social {
+    margin-top: 15px; 
+}
+
+.footer .social a {
+    margin: 0 10px;
+    display: inline-block;
+}
+
+.footer .social a img {
+    width: 30px;
+    height: 30px;
+    transition: transform 0.3s ease;
+    border-radius: 25%;
+}
+
+.footer .social a:hover img {
+    transform: scale(1.1);
+}
+
+@media (max-width: 600px) {
+    .footer {
+        font-size: 12px;
+        padding: 15px;
+    }
+
+    .footer .social a img {
+        width: 25px;
+        height: 25px;
+    }
 }
